clear the double ws foxdot server, resizable logs, fix word wrap crashpanel, start server with crashpanel

--- a/webTroop/src/css/crashpanel.css
+++ b/webTroop/src/css/crashpanel.css
@@ -35,6 +35,10 @@ h1 {
     margin-bottom: 20px;
 }
 
+.server-active {
+  color: #b73030;
+}
+
 header, section, footer {
     margin-bottom: 10px;
   }
@@ -52,6 +56,10 @@ h2 {
 
 #crashPanelTitle {
   cursor: pointer;
+}
+
+fieldset {
+  padding: 0.4rem;
 }
 
 .foxdot-info {
@@ -84,6 +92,9 @@ h2 {
   color: var(--text-col-2);
   font-size: 1rem;
   overflow: auto;
+  overflow-wrap: break-word; /* Permet le retour à la ligne pour les mots longs */
+  white-space: pre-wrap; /* Conserve les espaces et les retours à la ligne */
+  word-wrap: break-word; /* Support pour les anciens navigateurs */
 }
 
 .h10 {
