--- a/webTroop/src/css/style.css
+++ b/webTroop/src/css/style.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  height: 100%;
+  height: 100vh;
 }
 
 #editor-container {
@@ -25,11 +25,19 @@ body {
   margin: 0;
   background: #1e1e1e;
   width: 100%;
+  flex-grow: 1;
 }
 
 #editor {
   flex: 1;
-  min-height: 80%;
+  min-height: 0;
+}
+
+#separator {
+  height: 5px;
+  background: #444;
+  cursor: row-resize; 
+  z-index: 1000;
 }
 
 #logs {
@@ -39,7 +47,6 @@ body {
   white-space: pre-wrap;
   word-wrap: break-word;
   font-family: monospace;
-  padding: 10px;
   overflow-y: auto;
   border-top: 1px solid #3d3d3d;
 }
@@ -53,6 +60,10 @@ body {
 
 .log-entry.error-log {
   border-color: #9b2828;
+}
+
+.log-entry.help {
+  border-color: #6461dd;
 }
 
 .CodeMirror {
